src/test/ui/issues/issue-3XXXX/issue-34229.rs
#[derive(PartialEq)] struct Comparable;
#[derive(PartialEq, PartialOrd)] struct Nope(Comparable);
//~^ ERROR can't compare `Comparable`

fn main() {}
